--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
   <meta name="theme-color" content="#000000" />
   <meta
     name="description"
-    content="La primera red social Dominicana. Crea una cuenta o inicia sesión en Aycoro y conéctate con amigos, familiares y otras personas que quieras conocer además comparte fotos y envía mensajes a quien quieras."
+    content="Pagina para practicar quizes."
   />
   <meta
     name="keywords"
-    content="aycoro, red social, social network, app, aplicacion, chat"
+    content="Quizep, quiz, examan, pruebin, prueba"
   />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -21,7 +21,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
     crossorigin="anonymous"
   />
-  <title>Aycoro</title>
+  <title>Quizep</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
